# exceptions4c

./: .codecov.yml  .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Makefile.am  NOTICE  README.md  clib.json  configure.ac  e4c.pc.in  exceptions4c.pc.in  package.json  sonar-project.properties
.github/: FUNDING.yml
.github/workflows/: build.yml  docs.yml  release.yml  sonar.yml
doc/: Makefile.am  README.md  annotated.html  annotated.js  classes.html  e4c_8h.html  e4c_8h.js  e4c__rsc_8h.html  e4c__rsc_8h.js  e4c__st__g_8h.html  e4c__st__g_8h.js  except4c_8c.html  except4c_8h.html  exceptions4c.css  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main.html  navtree.css  navtree.js  navtreeindex0.js  struct_exception.html  struct_exception_context.html  struct_exception_frame.html  struct_signal_mapping.html  structe4c__exception.html  structe4c__exception.js  structe4c__exception__type.html  structe4c__exception__type.js  structe4c__signal__mapping.html  structe4c__signal__mapping.js  (+1 more)
doc/search/: all_61.js  all_62.js  all_63.js  all_65.js  all_66.js  all_68.js  all_69.js  all_6b.js  all_6e.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  classes_65.js  defines_61.js  defines_63.js  defines_65.js  defines_66.js  defines_72.js  defines_74.js  defines_75.js  defines_77.js  enums_65.js  enumvalues_65.js  files_65.js  functions_65.js  pages_6e.html  search.js  typedefs_65.js  variables_61.js  variables_63.js  variables_64.js  variables_65.js  variables_66.js  variables_6c.js  variables_6d.js  variables_6e.js  variables_72.js  variables_74.js  (+1 more)
docs/: Doxyfile  README.md  exceptions4c.css  footer.html
etc/: Doxyfile  backtrace.c  e4c.doc  e4c_lite.c  e4c_lite.h  e4c_rsc.c  e4c_rsc.h  e4c_st_g.c  e4c_st_g.h  except4c.doc  exceptions4c-2.4.6-1gc.DevPak
etc/doxygen/: footer.html  header.html
examples/: customization.c  pet-store.c  pthreads.c  signals.c  uncaught-handler.c
lite/src/: e4c_lite.c  e4c_lite.h
lite/test/: README.md  caught.c  cleanup.c  hierarchy.c  limits.c  overflow.c  t_caught.c  t_cleanup.c  t_hierarchy.c  t_limits.c  t_overflow.c  t_uncaught.c  testing.h  uncaught.c
src/: Makefile.am  e4c.c  e4c.h  except4c.c  except4c.h  exceptions4c.c  exceptions4c.h
test/: Makefile  Makefile.am  README.md  a01.c  a02.c  a03.c  a04.c  a05.c  a06.c  a07.c  a08.c  a09.c  a10.c  a11.c  a12.c  a13.c  a14.c  a15.c  a16.c  b01.c  b02.c  b03.c  b04.c  b05.c  b06.c  b07.c  b08.c  b09.c  b10.c  b11.c  b12.c  b13.c  b14.c  b15.c  b16.c  b17.c  b18.c  b19.c  b20.c  b21.c  (+203 more)
tests/: catch-all.c  catch-duplicate.c  catch-generic.c  catch-sigint.c  catch-sigsegv.c  catch-sigterm.c  catch-specific.c  catch-unordered.c  finally.c  get-exception.c  handler-finalize.c  handler-initialize.c  handler-terminate.c  handler-uncaught.c  is-uncaught.c  panic-block-catch.c  panic-block-next.c  panic-block-try.c  panic-context.c  panic-dangling.c  panic-reacquire.c  panic-retry.c  panic-try.c  reacquire.c  retry.c  testing.h  throw-cause.c  throw-format.c  throw-suppressed.c  throw-uncaught-1.c  throw-uncaught-2.c  with-use.c
